--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+backports.functools-lru-cache==1.5
+configparser==3.5.0
+enum34==1.1.6
+singledispatch==3
+
 appnope==0.1.0
 astroid==2.0.4
 backcall==0.1.0
@@ -5,7 +10,7 @@ decorator==4.3.0
 dj-database-url==0.5.0
 Django==2.0.5
 django-extensions==2.1.2
-django-heroku==0.3.1
+django_heroku==0.3.1
 gunicorn==19.9.0
 ipython==6.5.0
 ipython-genutils==0.2.0
