--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ decorator==4.3.0
 dj-database-url==0.5.0
 Django==2.0.5
 django-extensions==2.1.2
-django_heroku==0.3.1
+django-heroku==0.3.1
 gunicorn==19.9.0
 ipython==6.5.0
 ipython-genutils==0.2.0
